--- a/FlurlBlazor/Client/_Imports.razor
+++ b/FlurlBlazor/Client/_Imports.razor
@@ -5,5 +5,7 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
+@using ReactiveUI.Blazor;
 @using FlurlBlazor.Client
 @using FlurlBlazor.Client.Shared
+@using FlurlBlazor.Client.ViewModels
